
- added ModuleTemplate class, which allows the construction
of a Template given a Python module generated by a previous
Template.   This allows Python modules alone to be used
as templates with no compilation step.   Source code
and template source are optional but allow error reporting
to work correctly.

- fixed Python 2.3 compat. in mako.pyparser [ticket:90]


0.2.2
- cached blocks now use the current context when rendering
an expired section, instead of the original context
passed in [ticket:87]
- fixed a critical issue regarding caching, whereby 
a cached block would raise an error when called within a
cache-refresh operation that was initiated after the 
initiating template had completed rendering.

0.2.1
- fixed bug where 'output_encoding' parameter would prevent 
render_unicode() from returning a unicode object.
- bumped magic number, which forces template recompile for 
this version (fixes incompatible compile symbols from 0.1 
series).
- added a few docs for cache options, specifically those that
help with memcached.

0.2.0
- Speed improvements (as though we needed them, but people
  contributed and there you go):

  - added "bytestring passthru" mode, via
    `disable_unicode=True` argument passed to Template or
    TemplateLookup. All unicode-awareness and filtering is
    turned off, and template modules are generated with
    the appropriate magic encoding comment. In this mode,
    template expressions can only receive raw bytestrings
    or Unicode objects which represent straight ASCII, and
    render_unicode() may not be used if multibyte
    characters are present. When enabled, speed
    improvement around 10-20%. [ticket:77] (courtesy
    anonymous guest)

  - inlined the "write" function of Context into a local
    template variable. This affords a 12-30% speedup in
    template render time. (idea courtesy same anonymous
    guest) [ticket:76]
  
- New Features, API changes: 
 
  - added "attr" accessor to namespaces. Returns